# geysigning

./: meson.build
data/: meson.build
src/: gks-main.c  meson.build
